--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100%;
+  margin-top: 10rem;
 }
 
 .app-content {
   margin: 0.5rem;
   display: flex;
-  /* flex-direction: column; */
   border-radius: 2rem;
   overflow: hidden;
   box-shadow: inset 0 0 40px rgba(224, 31, 31, 0.2),
@@ -28,10 +26,6 @@
   padding-left: 0.7rem;
   height: 100%;
   position: absolute;
-  /* pointer-events: none; */
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
 }
 
 .search-input {
@@ -69,7 +63,6 @@
 
 .city {
   min-height: 5rem;
-  margin-bottom: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -77,7 +70,7 @@
   background: linear-gradient(rgba(70, 68, 68, 0.6), rgba(0, 0, 0, 0.6)),
     url('./components/assets/city-bg.png');
   background-size: cover;
-  margin: 1rem 0;
+  margin-top: 2rem;
 }
 
 .city h3 {
@@ -110,7 +103,6 @@
   flex-direction: column;
   justify-content: flex-start;
   height: 100%;
-  min-width: 500px;
   max-width: 900px;
 }
 .center-layout-content {
@@ -119,6 +111,11 @@
 
 .center-layout-content h5 {
   margin-left: 1.5rem;
+}
+.active-btn {
+  color: #635bff !important;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #635bff !important;
 }
 
 .select-day button {
@@ -130,14 +127,15 @@
   background: none;
   cursor: pointer;
   outline: none;
+  color: grey;
 }
 
 .select-day button:hover {
-  color: blue;
+  color: #635bff;
 }
 
 .week-days {
-  margin: 2rem 0;
+  margin: 2rem 1rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -147,12 +145,27 @@
   padding: 1rem;
   background-color: white;
   border-radius: 0.5rem;
+  margin: 0.6rem;
+}
+
+.week-days p {
+  margin: 0;
+}
+
+.week-days-day:hover {
+  background: rgb(185, 179, 179);
+  cursor: pointer;
+  color: white;
+}
+
+.weather-icon {
+  height: 50px;
+  width: 50px;
 }
 
 .weather-details div {
   padding: 5px;
   min-width: 200px;
-  min-height: 100px;
   margin: 0.6rem;
 }
 
@@ -179,4 +192,16 @@
 
 .sun-rise span {
   font-size: 1.5rem;
+}
+
+@media (max-width: 760px) {
+  .app {
+    margin-top: 0.5rem;
+  }
+  .app-content {
+    flex-direction: column;
+  }
+  .week-days {
+    justify-content: flex-start;
+  }
 }
